# ks903openaigiminilivegdplama3

./: README.md
haskell-judge/: Judge.hs
my-secure-gemini/: Uninstall Haskell.ps1  docker-compose.yml  package-lock.json
my-secure-gemini/backend/: Cargo.toml
my-secure-gemini/backend/src/: main.rs
my-secure-gemini/frontend/: index.html  package-lock.json  package.json  tsconfig.json
my-secure-gemini/frontend/src/: App.tsx  main.tsx
my-secure-gemini/geteway/: go.mod  main.go
my-secure-gemini/policy-server/: Dockerfile  Main.hs  policy-server.cabal
