cabal-version:      2.4
name:               policy-server
version:            0.1.0.0

executable policy-server
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                    , scotty
                    , aeson
                    , http-types
    hs-source-dirs:   .
    default-language: Haskell2010